[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/main/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/startup/outer_caves_logo.png" type="Texture" id=2]
[ext_resource path="res://assets/resources/fonts/dynamic_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/audio/music/brave-epic-cinematic-210401.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sprites/startup/youtube_icon_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/startup/discord_icon_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/startup/youtube_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/startup/icon_monochrome_dark.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/startup/discord_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/startup/background.png" type="Texture" id=10]

[sub_resource type="DynamicFontData" id=17]
antialiased = false
font_path = "res://assets/fonts/ThaleahFat.ttf"

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = SubResource( 17 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/front_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "menu_fadein"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/front_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0.588235 ), Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "menu_fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/front_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0.588235 ), Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -50.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/front_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/floating_box/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -31, 15 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "menu_fadein"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/front_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.784314 ), Color( 0, 0, 0, 0.588235 ), Color( 0, 0, 0, 0.392157 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "taptoplay"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/floating_box/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -82, 8 ), Vector2( -82, 8 ), Vector2( -82, 15 ), Vector2( -82, 15 ), Vector2( -82, 8 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title" type="TextureRect" parent="CanvasLayer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 123.0
margin_bottom = 77.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="version" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -20.0
margin_right = 102.0
margin_bottom = -5.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( -10, 20 )
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="floating_box" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 20, 40 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="CanvasLayer/floating_box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = 15.0
margin_right = 173.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 102, 15 )
custom_fonts/font = ExtResource( 3 )
text = "- Tap to Play! -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TouchScreenButton" type="Button" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -214.0
margin_top = 10.0
margin_bottom = 70.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 8 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HBoxContainer"]
margin_left = 64.0
margin_right = 214.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )
custom_fonts/normal_font = SubResource( 18 )
text = "Made with Godot"
scroll_active = false

[node name="social" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -80.0
margin_right = -60.0
margin_bottom = -40.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 10, 0 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Discord" type="TextureButton" parent="CanvasLayer/social"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Youtube" type="TextureButton" parent="CanvasLayer/social"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="front_rect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.10352e-05
margin_right = -6.10352e-05
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/menu_fadein = SubResource( 9 )
anims/menu_fadeout = SubResource( 16 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 13 )
anims/menu_fadein = SubResource( 14 )
anims/taptoplay = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="CanvasLayer/social/Discord" to="." method="_on_Discord_pressed"]
[connection signal="pressed" from="CanvasLayer/social/Youtube" to="." method="_on_Youtube_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
